--- a/AndroidStudioProjects/BaseDades/app/src/main/res/layout/activity_local.xml
+++ b/AndroidStudioProjects/BaseDades/app/src/main/res/layout/activity_local.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,18 +10,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.prueba.application.my.mati.comonicacionescompleto.MainActivity">
-
-    <TextView
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#0051b4"
-        android:text="INTRODUCE LAS COORDENADAS:"
-        android:textSize="18dp"
-        android:layout_marginBottom="15dp"
-        android:id="@+id/textView" />
+    tools:context="com.example.philippe.basedades.Local">
 
 
     <LinearLayout
@@ -30,86 +19,132 @@
         android:layout_height="wrap_content"
         android:gravity="center">
 
-        <EditText
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/etLatitud"
-            android:inputType="numberDecimal|numberSigned"
-            android:layout_marginRight="30dp"
-            android:gravity="center"
-            android:hint="latitud"/>
-
-        <EditText
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:id="@+id/etLongitud"
-            android:inputType="numberDecimal|numberSigned"
-            android:hint="longitud"/>
-
     </LinearLayout>
 
-
-    <Button
-        android:layout_marginTop="15dp"
-        android:layout_gravity="center"
-        android:layout_width="180dp"
-        android:layout_height="35dp"
-        android:background="#255eb9"
-        android:textColor="#fff"
-        android:typeface="sans"
-        android:text="Obtener Localizacion"
-        android:id="@+id/btCalcular" />
-
-    <TextView
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textColor="#0d6ebe"
-        android:textSize="18sp"
-        android:id="@+id/tvResultado"
-        android:layout_marginBottom="40dp"/>
-
-
-    <TextView
-        android:layout_marginLeft="50dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ejemplo de coordenadas conocidas:"
-        android:layout_marginBottom="5dp"
-        android:textStyle="bold"
-        android:id="@+id/tv0" />
-    <TextView
-        android:layout_marginLeft="50dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="IES Serpis: 39.473142, -0.338843"
-        android:id="@+id/tv1" />
-    <TextView
-        android:layout_marginLeft="50dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nueva York: 40.706048, -74.008926"
-        android:id="@+id/tv2" />
-    <TextView
-        android:layout_marginLeft="50dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Bejing: 39.904911, 116.407018"
-        android:id="@+id/tv3" />
-    <TextView
-        android:layout_marginLeft="50dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Corea de Norte: 39.046567, 125.753126"
-        android:id="@+id/tv4" />
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@android:drawable/ic_menu_revert"
-        android:id="@+id/locback" />
+        android:id="@+id/locback"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 
-</LinearLayout>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/mapa"
+        android:id="@+id/imageView12"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/locback"
+        android:layout_below="@+id/btCalcular" />
+
+    <TextView
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#FF5722"
+        android:text="INTRODUIR LES COORDENADES:"
+        android:textSize="18dp"
+        android:id="@+id/textView"
+        android:textStyle="normal|bold"
+        android:layout_below="@+id/linearLayout"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_gravity="center"
+        android:layout_width="180dp"
+        android:layout_height="35dp"
+        android:background="#0097A7"
+        android:textColor="#fff"
+        android:typeface="sans"
+        android:text="Obtindre Localització"
+        android:id="@+id/btCalcular"
+        android:layout_below="@+id/etLongitud"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="27dp" />
+
+    <EditText
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:id="@+id/etLongitud"
+        android:inputType="numberDecimal|numberSigned"
+        android:hint="longitud"
+        android:layout_alignBaseline="@+id/etLatitud"
+        android:layout_alignBottom="@+id/etLatitud"
+        android:layout_toEndOf="@+id/etLatitud" />
+
+    <EditText
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/etLatitud"
+        android:inputType="numberDecimal|numberSigned"
+        android:layout_marginRight="30dp"
+        android:gravity="center"
+        android:hint="latitud"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/textView"
+        android:layout_alignStart="@+id/tv1" />
+
+    <TextView
+        android:layout_marginLeft="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="IES Serpis: 39.473142, -0.338843"
+        android:id="@+id/tv1"
+        android:layout_below="@+id/tv0"
+        android:layout_alignEnd="@+id/tv2" />
+
+    <TextView
+        android:layout_marginLeft="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Nueva York: 40.706048, -74.008926"
+        android:id="@+id/tv2"
+        android:layout_below="@+id/tv1"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_marginLeft="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Pego: 38.8725, -0.063056"
+        android:id="@+id/tv3"
+        android:layout_below="@+id/tv2"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_marginLeft="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Corea de Norte: 39.046567, 125.753126"
+        android:id="@+id/tv4"
+        android:layout_below="@+id/tv3"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_marginLeft="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Ejemplo de coordenadas conocidas:"
+        android:textStyle="bold"
+        android:id="@+id/tv0"
+        android:layout_marginTop="31dp"
+        android:layout_below="@+id/tvResultado"
+        android:layout_alignParentStart="true"
+        android:textAlignment="textStart" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:id="@+id/tvResultado"
+        android:visibility="visible"
+        android:layout_marginTop="29dp"
+        android:textAlignment="center"
+        android:textStyle="normal|bold"
+        android:layout_below="@+id/btCalcular"
+        android:layout_alignParentStart="true"
+        android:textSize="19sp"
+        android:layout_height="25dp" />
+
+</RelativeLayout>
